syntax = "proto3";
package provenance.hold.v1;

option go_package          = "github.com/provenance-io/provenance/x/hold";
option java_package        = "io.provenance.hold.v1";
option java_multiple_files = true;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

// AccountHold associates an address with an amount on hold for that address.
message AccountHold {
  // address is the account address that holds the funds on hold.
  string address = 1;
  // amount is the balances that are on hold for the address.
  repeated cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (amino.dont_omitempty)   = true,
    (amino.encoding)         = "legacy_coins"
  ];
}